# SignalFilter

./: .gitignore  .gitmodules  CMakeLists.txt
desHomutov/: main.py
src/: App.cpp  App.h  SignalProcessor.cpp  SignalProcessor.h  SpectrumFilter.cpp  SpectrumFilter.h  fft.h  main.cpp
src/UI/: SignalUI.cpp  SignalUI.h  SinController.cpp  SinController.h
src/math/: fft.cpp  fft.h
